controls.css
/* big-picture stuff  */
.rectangle {
    border: 1px solid black;
    height: 80%;
    width: 75%;
    position: absolute;
    top: 50%;
    left: 49%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    z-index: -10;
    background-color: dodgerblue;
    opacity: 0.25;
}

.grid {
    display: grid;
    grid-template-columns: 49% 49%;
    grid-auto-rows: 49vh 48vh;
}

.item {
    border: 1px solid black;
    padding-left: 20px;
    position: relative;
}

/* hide GG box */
#GG-leftQuad{
    visibility: hidden;
}

/* everything in the box will need to be explicitly positioned */
.item > * {
    position: absolute;
}
.mode{
    background: pink
}
.darkmode{
    background: black;
    color: white;


}
.darkmode     .item {
    border: 1px solid white;
    padding-left: 20px;
    position: relative;
};

#disclaimerMsg {
    background-color: yellow;
    width: 475px;
    font-size: 20px;
    top: -22px;
}

/* ******************************************** */
/* elements within each person box  */
.name-header {
    position: absolute;
    font-size: 40px;
}

.updateMsg {
    position: absolute;
    color: #0067ee;
    font-family: Helvetica;
    visibility: hidden;
    font-size: 16px;
    padding-top: 5px;
    width: 17%;
}

/* ******************************************** */
/* sliders */
input[type="range"] {
    width: 200px; /* relative to label */
    height: 15px;
    border-radius: 5px;

    /* overflow: hidden; */
    /* width: 80px; */
    /* -webkit-appearance: */
    background-color: #9a905d;
}

/* input[type='range']::-webkit-slider-runnable-track {
    height: 15px;
    -webkit-appearance: none;
    color: #13bba4;
    margin-top: -1px;
  } */

/* slider circle */
/* input[type="range"]::-webkit-slider-thumb, input[type="range"]::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #0067ee;
    cursor: pointer;
} */

label {
    font-family: Helvetica;
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    display: block;
    /* Disable selection of the label text */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* ******************************************** */
/* positioning for each person's controls */

/* ***** EMILY ***** */
#Emily-rightQuad .name-header {
    /* left: 80%; */
    top: 72%;
    font-size: 30px;
    right: 80%;
    /* font-size: 100%; */
}

#Emily-rightQuad .updateMsg {
    left: 80%;
    top: 55%;
    /* font-size: 20px; */
}

#Emily-rightQuad .slider-volume {
    top: 7%;
}

#Emily-rightQuad .slider-brightness {
    top: 7%;
    left: 50%;
}

#Emily-rightQuad .checkbox-blur {
    top: 20%;
    /* left: 77%; */
    right: 40rem;
    width: 3rem;
}

#Emily-rightQuad .checkbox-monochrome {
    top: 45%;
    /* left: 79.5%; */
}


/* ***** ZAHRA ***** */
#Zahra-leftQuad .name-header {
    /* left: 1%; */
    /* top: -8%; */
    font-size: 30px;
    width: 3rem;
    left: 80%;
    top: 55%;
    right: 25rem
    /* font-size: 100%; */
}

#Zahra-leftQuad .updateMsg {
    /* left: 83%; */
    top: 12%;
    /* width: 20%; */
}

#Zahra-leftQuad .checkbox-blur {
    top: 42%;
    /* left: 1%; */
    left: 79%;
    right: 25rem;
    width: 3rem;
}

#Zahra-leftQuad .checkbox-monochrome {
    top: 67%;
    /* left: 1%; */
}

#Zahra-leftQuad .slider-volume {
    top: 6%;
    /* left: 1% */
}

#Zahra-leftQuad .slider-brightness {
    top: 7%;
    left: 50%;
}


/* ***** STEVEN ***** */
#Steven-rightQuad .name-header {
    left: 80%;
    top: -8%;
    font-size: 42px;
    /* font-size: 100%; */
}

#Steven-rightQuad .updateMsg {
    left: 80%;
    top: 12%;
}

#Steven-rightQuad .checkbox-blur {
    top: 42%;
    left: 77%;
}

#Steven-rightQuad .checkbox-monochrome {
    top: 67%;
    left: 79.5%;
}

#Steven-rightQuad .slider-volume {
    top: 89%;
    /* left: 1% */
}

#Steven-rightQuad .slider-brightness {
    top: 89%;
    left: 50%;
}

